# j2cli

./: README.md  pyproject.toml
j2cli/: __init__.py  cli.py
